# scalebox-sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_CN.md  MANIFEST.in  Makefile  README.md  README_CN.md  mypy.ini  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scalebox/: __init__.py  cli.py  connection_config.py  exceptions.py  requirements.txt  version.py
scalebox/api/: __init__.py  metadata.py
scalebox/api/client/: __init__.py  client.py  types.py
scalebox/api/client/api/sandboxes/: get_sandboxes.py  get_sandboxes_sandbox_id_metrics.py  post_sandboxes.py  post_sandboxes_sandbox_id_connect.py
scalebox/api/client/models/: connect_sandbox.py  error.py  listed_sandbox.py  new_sandbox.py  sandbox.py  sandbox_detail.py  sandbox_metric.py  sandbox_state.py
scalebox/client/: aclient.py  api.proto  buf.gen.yaml  client.py  requirements.txt
scalebox/code_interpreter/: __init__.py  charts.py  code_interpreter_async.py  code_interpreter_sync.py  constants.py  exceptions.py  models.py
scalebox/csx_connect/: __init__.py  client.py
scalebox/csx_desktop/: main.py
scalebox/sandbox/: main.py  sandbox_api.py  signature.py  utils.py
scalebox/sandbox/commands/: command_handle.py
scalebox/sandbox/filesystem/: filesystem.py  watch_handle.py
scalebox/sandbox_async/: __init__.py  main.py  sandbox_api.py  utils.py
scalebox/sandbox_async/commands/: command.py  command_handle.py  pty.py
scalebox/sandbox_async/filesystem/: filesystem.py  watch_handle.py
scalebox/sandbox_sync/: __init__.py  main.py  sandbox_api.py
scalebox/sandbox_sync/commands/: command.py  command_handle.py  pty.py
scalebox/sandbox_sync/filesystem/: filesystem.py  watch_handle.py
scalebox/test/: CODE_INTERPRETER_TESTS_READY.md  README.md  aclient.py  bedrock_openai_adapter.py  code_interpreter_centext.py  code_interpreter_centext_sync.py  code_interpreter_test.py  code_interpreter_test_sync.py  main.go  run_all_validation_tests.py  run_code_interpreter_tests.sh  run_stress_code_interpreter_sync.py  run_tests.sh  simple_upload_example.py  stabitiy_test.py  test_basic.py  test_browser_use.py  test_browser_use_scalebox.py  test_code_interpreter_async_comprehensive.py  test_code_interpreter_e2basync_comprehensive.py  test_code_interpreter_e2bsync_comprehensive.py  test_code_interpreter_execcode.py  test_code_interpreter_sync_comprehensive.py  test_connect_pause_async.py  test_connect_pause_sync.py  test_csx_desktop_examples.py  test_desktop_sandbox_sf.py  test_download_url.py  test_e2b_first.py  test_existing_sandbox.py  test_sandbox_async_comprehensive.py  test_sandbox_object_storage_example.py  test_sandbox_object_storage_example_async.py  test_sandbox_stress_and_edge_cases.py  test_sandbox_sync_comprehensive.py  test_sandbox_usage_examples.py  test_sf.py  test_watch_dir_async.py  testacreate.py  testagetinfo.py  (+8 more)
scalebox/utils/: httpcoreclient.py  httpxclient.py
scalebox_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bump_version.py  release.py  setup-dev.sh
