[metadata]
name = scalebox-sdk
version = attr: scalebox.__version__
description = ScaleBox Python SDK - A multi-language code execution sandbox
long_description = file: README.md
long_description_content_type = text/markdown
author = ScaleBox Team
author_email = dev@scalebox.dev
url = https://github.com/scalebox-dev/scalebox-sdk-python
project_urls =
    Homepage = https://github.com/scalebox-dev/scalebox-sdk-python
    Documentation = https://docs.scalebox.dev/python-sdk
    Repository = https://github.com/scalebox-dev/scalebox-sdk-python
    Issues = https://github.com/scalebox-dev/scalebox-sdk-python/issues
    Changelog = https://github.com/scalebox-dev/scalebox-sdk-python/blob/main/CHANGELOG.md
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: System :: Distributed Computing
keywords = sandbox, code-execution, multi-language, python, r, nodejs, typescript, java, bash
python_requires = >=3.8

[options]
packages = find:
package_dir = .
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = scalebox*

[options.package_data]
scalebox = py.typed, *.pyi

[options.entry_points]
console_scripts =
    scalebox = scalebox.cli:main

[bdist_wheel]
universal = 1

[build_system]
requires = setuptools>=61.0, wheel
build-backend = setuptools.build_meta
